Update product page layout, fix prompt names, more style tweaks - BD

--- a/src/pages/customstyles.scss
+++ b/src/pages/customstyles.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
-// $title-color: #ff0000;
+// $footer-background-color: hsl(0, 0%, 4%);
+// $footer-color: hsl(0, 0%, 100%);
 
 @import "~bulma/bulma.sass";
